@@ -169,6 +169,7 @@
      [sshd.8]
      list SSH2 ciphers
  - (bal) Put HAVE_PW_CLASS_IN_PASSWD back into pwcopy()
+ - (bal) Fix up logging since it changed.  removed log-*.c
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
@@ -4361,4 +4362,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.904 2001/03/05 07:57:09 mouring Exp $
+$Id: ChangeLog,v 1.905 2001/03/05 08:16:54 mouring Exp $
